--- a/package.json
+++ b/package.json
@@ -1,9 +1,3 @@
 {
-  "dependencies": {
-    "zwitterion": "^0.47.0"
-  },
-
-  "scripts": {
-    "build-static": "zwitterion --build-static"
-  }
+    "type": "module"
 }
